[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/ItemDatabasePopup.gd" type="Script" id=3]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/ItemDescription.gd" type="Script" id=4]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/MagicItemContainer.gd" type="Script" id=5]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/InventoryList.gd" type="Script" id=6]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/QuestItemContainer.gd" type="Script" id=7]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/DatabaseTabs.gd" type="Script" id=8]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="InventoryContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory" type="VBoxContainer" parent="InventoryContainer"]
margin_right = 950.0
margin_bottom = 1044.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContainer/Inventory"]
margin_right = 950.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="InventoryContainer/Inventory/HBoxContainer"]
margin_right = 69.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 0
text = "Inventory: "
valign = 1

[node name="Spacer" type="Control" parent="InventoryContainer/Inventory/HBoxContainer"]
margin_left = 73.0
margin_right = 702.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SortInventory" type="Button" parent="InventoryContainer/Inventory/HBoxContainer"]
margin_left = 706.0
margin_right = 808.0
margin_bottom = 24.0
size_flags_horizontal = 0
text = "Sort Inventory"

[node name="DeleteSelected" type="Button" parent="InventoryContainer/Inventory/HBoxContainer"]
margin_left = 812.0
margin_right = 926.0
margin_bottom = 24.0
text = "Delete Selected"

[node name="AddItem" type="Button" parent="InventoryContainer/Inventory/HBoxContainer"]
margin_left = 930.0
margin_right = 950.0
margin_bottom = 24.0
text = "+"

[node name="HSeparator" type="HSeparator" parent="InventoryContainer/Inventory"]
margin_top = 28.0
margin_right = 950.0
margin_bottom = 32.0

[node name="InventoryScroller" type="ScrollContainer" parent="InventoryContainer/Inventory"]
margin_top = 36.0
margin_right = 950.0
margin_bottom = 1008.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="InventoryList" type="VBoxContainer" parent="InventoryContainer/Inventory/InventoryScroller" groups=["Persist"]]
margin_right = 950.0
margin_bottom = 972.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="HSeparator2" type="HSeparator" parent="InventoryContainer/Inventory"]
margin_top = 1012.0
margin_right = 950.0
margin_bottom = 1016.0

[node name="Summary" type="HBoxContainer" parent="InventoryContainer/Inventory"]
margin_top = 1020.0
margin_right = 950.0
margin_bottom = 1044.0
rect_min_size = Vector2( 0, 24 )

[node name="Label" type="Label" parent="InventoryContainer/Inventory/Summary"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Total Value: "

[node name="TotalValue" type="LineEdit" parent="InventoryContainer/Inventory/Summary"]
margin_left = 82.0
margin_right = 232.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
align = 2
editable = false

[node name="Label2" type="Label" parent="InventoryContainer/Inventory/Summary"]
margin_left = 236.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 19.0
text = "gp"

[node name="Spacer" type="Control" parent="InventoryContainer/Inventory/Summary"]
margin_left = 255.0
margin_right = 681.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="InventoryContainer/Inventory/Summary"]
margin_left = 685.0
margin_top = 5.0
margin_right = 773.0
margin_bottom = 19.0
text = "Total Weight: "

[node name="TotalWeight" type="LineEdit" parent="InventoryContainer/Inventory/Summary"]
margin_left = 777.0
margin_right = 927.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
align = 2
editable = false

[node name="Label4" type="Label" parent="InventoryContainer/Inventory/Summary"]
margin_left = 931.0
margin_top = 5.0
margin_right = 950.0
margin_bottom = 19.0
text = "lbs"

[node name="VSeparator" type="VSeparator" parent="InventoryContainer"]
margin_left = 954.0
margin_right = 958.0
margin_bottom = 1044.0

[node name="Right" type="VBoxContainer" parent="InventoryContainer"]
margin_left = 962.0
margin_right = 1912.0
margin_bottom = 1044.0
size_flags_horizontal = 3

[node name="ButtonContainer" type="HBoxContainer" parent="InventoryContainer/Right"]
margin_right = 950.0
margin_bottom = 20.0

[node name="ItemDatabase" type="Button" parent="InventoryContainer/Right/ButtonContainer"]
margin_right = 106.0
margin_bottom = 20.0
text = "Item Database"

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContainer/Right"]
margin_top = 24.0
margin_right = 950.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="InventoryContainer/Right/HBoxContainer"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 19.0
text = "Custom Info for: "

[node name="CustomInfoItemName" type="LineEdit" parent="InventoryContainer/Right/HBoxContainer"]
margin_left = 111.0
margin_right = 950.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 24 )
size_flags_horizontal = 3

[node name="ItemDescription" type="TextEdit" parent="InventoryContainer/Right"]
margin_top = 52.0
margin_right = 950.0
margin_bottom = 380.0
size_flags_vertical = 3
wrap_enabled = true
script = ExtResource( 4 )

[node name="MagicItems" type="VBoxContainer" parent="InventoryContainer/Right"]
margin_top = 384.0
margin_right = 950.0
margin_bottom = 712.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContainer/Right/MagicItems"]
margin_right = 950.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="InventoryContainer/Right/MagicItems/HBoxContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
text = "Magic Items:"

[node name="Spacer" type="Control" parent="InventoryContainer/Right/MagicItems/HBoxContainer"]
margin_left = 87.0
margin_right = 684.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SortMagicItems" type="Button" parent="InventoryContainer/Right/MagicItems/HBoxContainer"]
margin_left = 688.0
margin_right = 808.0
margin_bottom = 20.0
text = "Sort Magic Items"

[node name="DeleteSelected" type="Button" parent="InventoryContainer/Right/MagicItems/HBoxContainer"]
margin_left = 812.0
margin_right = 926.0
margin_bottom = 20.0
text = "Delete Selected"

[node name="AddItem" type="Button" parent="InventoryContainer/Right/MagicItems/HBoxContainer"]
margin_left = 930.0
margin_right = 950.0
margin_bottom = 20.0
hint_tooltip = "Add magic item line"
text = "+"

[node name="HSeparator" type="HSeparator" parent="InventoryContainer/Right/MagicItems"]
margin_top = 24.0
margin_right = 950.0
margin_bottom = 28.0

[node name="ScrollBox" type="ScrollContainer" parent="InventoryContainer/Right/MagicItems"]
margin_top = 32.0
margin_right = 950.0
margin_bottom = 328.0
size_flags_vertical = 3

[node name="MagicItemContainer" type="VBoxContainer" parent="InventoryContainer/Right/MagicItems/ScrollBox" groups=["Persist"]]
margin_right = 950.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="QuestItems" type="VBoxContainer" parent="InventoryContainer/Right"]
margin_top = 716.0
margin_right = 950.0
margin_bottom = 1044.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContainer/Right/QuestItems"]
margin_right = 950.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="InventoryContainer/Right/QuestItems/HBoxContainer"]
margin_top = 3.0
margin_right = 85.0
margin_bottom = 17.0
text = "Quest Items:"

[node name="Spacer" type="Control" parent="InventoryContainer/Right/QuestItems/HBoxContainer"]
margin_left = 89.0
margin_right = 682.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SortQuestItems" type="Button" parent="InventoryContainer/Right/QuestItems/HBoxContainer"]
margin_left = 686.0
margin_right = 808.0
margin_bottom = 20.0
text = "Sort Quest Items"

[node name="DeleteSelected" type="Button" parent="InventoryContainer/Right/QuestItems/HBoxContainer"]
margin_left = 812.0
margin_right = 926.0
margin_bottom = 20.0
text = "Delete Selected"

[node name="AddItem" type="Button" parent="InventoryContainer/Right/QuestItems/HBoxContainer"]
margin_left = 930.0
margin_right = 950.0
margin_bottom = 20.0
hint_tooltip = "Add quest item line"
text = "+"

[node name="HSeparator" type="HSeparator" parent="InventoryContainer/Right/QuestItems"]
margin_top = 24.0
margin_right = 950.0
margin_bottom = 28.0

[node name="ScrollBox" type="ScrollContainer" parent="InventoryContainer/Right/QuestItems"]
margin_top = 32.0
margin_right = 950.0
margin_bottom = 328.0
size_flags_vertical = 3

[node name="QuestItemContainer" type="VBoxContainer" parent="InventoryContainer/Right/QuestItems/ScrollBox" groups=["Persist"]]
margin_right = 950.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="ItemDatabasePopup" type="WindowDialog" parent="."]
visible = true
margin_left = 962.0
margin_top = 357.0
margin_right = 1905.0
margin_bottom = 1011.0
popup_exclusive = true
window_title = "Item Database"
resizable = true
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ItemDatabasePopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DatabaseTabs" type="TabContainer" parent="ItemDatabasePopup/VBoxContainer"]
margin_right = 943.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="PurchaseBar" type="HBoxContainer" parent="ItemDatabasePopup/VBoxContainer"]
visible = false
margin_top = 590.0
margin_right = 943.0
margin_bottom = 630.0

[node name="Quantity" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_right = 423.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
placeholder_text = "Quantity"

[node name="Spacer" type="Control" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 427.0
margin_right = 447.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )

[node name="cp" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 451.0
margin_right = 509.0
margin_bottom = 40.0
placeholder_text = "cp"

[node name="sp" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 513.0
margin_right = 571.0
margin_bottom = 40.0
placeholder_text = "sp"

[node name="ep" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 575.0
margin_right = 633.0
margin_bottom = 40.0
placeholder_text = "ep"

[node name="gp" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 637.0
margin_right = 695.0
margin_bottom = 40.0
placeholder_text = "gp"

[node name="pp" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 699.0
margin_right = 757.0
margin_bottom = 40.0
placeholder_text = "pp"

[node name="Confirm" type="Button" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 761.0
margin_right = 885.0
margin_bottom = 40.0
text = "Confirm Purchase"

[node name="Cancel" type="Button" parent="ItemDatabasePopup/VBoxContainer/PurchaseBar"]
margin_left = 889.0
margin_right = 943.0
margin_bottom = 40.0
text = "Cancel"

[node name="AddBar" type="HBoxContainer" parent="ItemDatabasePopup/VBoxContainer"]
visible = false
margin_top = 590.0
margin_right = 943.0
margin_bottom = 630.0

[node name="Quantity" type="LineEdit" parent="ItemDatabasePopup/VBoxContainer/AddBar"]
margin_right = 819.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
placeholder_text = "Quantity"

[node name="Confirm" type="Button" parent="ItemDatabasePopup/VBoxContainer/AddBar"]
margin_left = 823.0
margin_right = 885.0
margin_bottom = 40.0
text = "Confirm Addition"

[node name="Cancel" type="Button" parent="ItemDatabasePopup/VBoxContainer/AddBar"]
margin_left = 889.0
margin_right = 943.0
margin_bottom = 40.0
text = "Cancel"

[node name="ButtonBar" type="HBoxContainer" parent="ItemDatabasePopup/VBoxContainer"]
margin_top = 634.0
margin_right = 943.0
margin_bottom = 654.0

[node name="Purchase" type="Button" parent="ItemDatabasePopup/VBoxContainer/ButtonBar"]
margin_right = 469.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Purchase Item"

[node name="AddItem" type="Button" parent="ItemDatabasePopup/VBoxContainer/ButtonBar"]
margin_left = 473.0
margin_right = 943.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Add Item to Inventory"

[connection signal="button_up" from="InventoryContainer/Inventory/HBoxContainer/SortInventory" to="InventoryContainer/Inventory/InventoryScroller/InventoryList" method="_on_SortInventory_button_up"]
[connection signal="button_up" from="InventoryContainer/Inventory/HBoxContainer/DeleteSelected" to="InventoryContainer/Inventory/InventoryScroller/InventoryList" method="_on_DeleteSelected_button_up"]
[connection signal="button_up" from="InventoryContainer/Inventory/HBoxContainer/AddItem" to="InventoryContainer/Inventory/InventoryScroller/InventoryList" method="_on_AddItem_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/ButtonContainer/ItemDatabase" to="." method="_on_ItemDatabase_button_up"]
[connection signal="text_changed" from="InventoryContainer/Right/ItemDescription" to="InventoryContainer/Right/ItemDescription" method="_on_ItemDescription_text_changed"]
[connection signal="button_up" from="InventoryContainer/Right/MagicItems/HBoxContainer/SortMagicItems" to="InventoryContainer/Right/MagicItems/ScrollBox/MagicItemContainer" method="_on_SortMagicItems_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/MagicItems/HBoxContainer/DeleteSelected" to="InventoryContainer/Right/MagicItems/ScrollBox/MagicItemContainer" method="_on_DeleteSelected_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/MagicItems/HBoxContainer/AddItem" to="InventoryContainer/Right/MagicItems/ScrollBox/MagicItemContainer" method="_on_AddItem_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/QuestItems/HBoxContainer/SortQuestItems" to="InventoryContainer/Right/QuestItems/ScrollBox/QuestItemContainer" method="_on_SortQuestItems_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/QuestItems/HBoxContainer/DeleteSelected" to="InventoryContainer/Right/QuestItems/ScrollBox/QuestItemContainer" method="_on_DeleteSelected_button_up"]
[connection signal="button_up" from="InventoryContainer/Right/QuestItems/HBoxContainer/AddItem" to="InventoryContainer/Right/QuestItems/ScrollBox/QuestItemContainer" method="_on_AddItem_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/PurchaseBar/Confirm" to="ItemDatabasePopup" method="_on_Confirm_Purchase_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/PurchaseBar/Cancel" to="ItemDatabasePopup" method="_on_PurchaseBar_Cancel_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/AddBar/Confirm" to="ItemDatabasePopup" method="_on_AddItem_Confirm_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/AddBar/Cancel" to="ItemDatabasePopup" method="_on_AddBar_Cancel_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/ButtonBar/Purchase" to="ItemDatabasePopup" method="_on_Purchase_show_button_up"]
[connection signal="button_up" from="ItemDatabasePopup/VBoxContainer/ButtonBar/AddItem" to="ItemDatabasePopup" method="_on_AddItem_button_up"]
